tests/miz/pass/parser/pass_parser_nested_blocks_001.miz
definition
  theorem
    1 = 1;
  proof
  end;
end;
