tests/miz/fail/types/fail_type_elaboration_term_formula_gap_001.miz
theorem TermFormulaPayloadBoundary: 1 = 1;
